DE-11338 Dark Mode
Account detail scenes

--- a/Depo/Depo/Presentation/SubViews/LeavePremiumView/LeavePremiumHeaderView/LeavePremiumHeaderView.xib
+++ b/Depo/Depo/Presentation/SubViews/LeavePremiumView/LeavePremiumHeaderView/LeavePremiumHeaderView.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumHeaderView" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumHeaderView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="detailsLabel" destination="UBN-MQ-Oqk" id="W4G-gD-HS1"/>
                 <outlet property="topMessageLabel" destination="8TD-PF-9RX" id="zzI-wc-THU"/>
@@ -35,7 +34,8 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="UBN-MQ-Oqk" secondAttribute="trailing" priority="750" constant="23" id="3NM-rj-vAK"/>
                 <constraint firstItem="8TD-PF-9RX" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Cag-ca-CwE"/>
@@ -50,7 +50,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="UBN-MQ-Oqk" secondAttribute="bottom" id="zxc-iQ-JVa"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="Cag-ca-CwE"/>
@@ -70,4 +69,9 @@
             <point key="canvasLocation" x="72.799999999999997" y="-162.81859070464768"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
