--- a/Depo/Depo/Presentation/SubViews/LeavePremiumView/LeavePremiumView.xib
+++ b/Depo/Depo/Presentation/SubViews/LeavePremiumView/LeavePremiumView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeavePremiumView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="leavePremiumButton" destination="EyK-S1-Rmt" id="R00-T2-XnV"/>
                 <outlet property="leavePremiumHeaderView" destination="YlA-UQ-7Pw" id="rvf-hg-Ahi"/>
@@ -33,44 +34,44 @@
                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="647" translatesAutoresizingMaskIntoConstraints="NO" id="q6c-LM-wKc">
                             <rect key="frame" x="0.0" y="0.0" width="768" height="1443"/>
                             <subviews>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="353" translatesAutoresizingMaskIntoConstraints="NO" id="YlA-UQ-7Pw" customClass="LeavePremiumHeaderView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="353" translatesAutoresizingMaskIntoConstraints="NO" id="YlA-UQ-7Pw" customClass="LeavePremiumHeaderView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="768" height="353"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="375" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ZIN-J6-zfJ">
                                     <rect key="frame" x="0.0" y="377" width="614.5" height="986"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Vj-r9-8Mc" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Vj-r9-8Mc" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQC-iy-KTd" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQC-iy-KTd" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="143" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-vs-IOr" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-vs-IOr" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="286" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pst-sQ-N5Y" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pst-sQ-N5Y" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="429" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s6d-lu-WjY" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s6d-lu-WjY" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="572" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LIL-zU-Bgu" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LIL-zU-Bgu" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="715" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2o5-Ne-jtb" customClass="PremiumListView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2o5-Ne-jtb" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="858" width="614.5" height="128"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
                                     </subviews>
                                 </stackView>
-                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EyK-S1-Rmt" customClass="InsetsButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EyK-S1-Rmt" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="361" y="1383" width="46" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="Nmk-P3-g71"/>
@@ -89,7 +90,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="EyK-S1-Rmt" firstAttribute="top" secondItem="ZIN-J6-zfJ" secondAttribute="bottom" constant="20" id="4cv-Sc-580"/>
                                 <constraint firstItem="ZIN-J6-zfJ" firstAttribute="width" secondItem="q6c-LM-wKc" secondAttribute="width" multiplier="0.8" id="EnL-gE-HWe"/>
@@ -127,7 +128,8 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="q6c-LM-wKc" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="CDS-VO-rbS"/>
                 <constraint firstItem="XSv-5u-yBk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Ek8-Oc-ajV"/>
@@ -135,8 +137,12 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="XSv-5u-yBk" secondAttribute="bottom" id="fVw-6o-4EZ"/>
                 <constraint firstItem="XSv-5u-yBk" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="q8S-XJ-gbV"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="162" y="161"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
