--- a/Depo/Depo/Presentation/SubViews/PremiumView/PremiumListView/PremiumListView.xib
+++ b/Depo/Depo/Presentation/SubViews/PremiumView/PremiumListView/PremiumListView.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad12_9" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +14,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PremiumListView" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PremiumListView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="iconImageView" destination="85o-3m-St8" id="ujc-9p-V2R"/>
                 <outlet property="titleLabel" destination="K1o-5r-GMn" id="dCC-6s-Xf4"/>
@@ -28,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backupPremiumIcon" translatesAutoresizingMaskIntoConstraints="NO" id="85o-3m-St8">
-                    <rect key="frame" x="113.5" y="20" width="35" height="35"/>
+                    <rect key="frame" x="113" y="0.0" width="36" height="36"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="35" id="5du-W3-reG"/>
                         <constraint firstAttribute="width" secondItem="85o-3m-St8" secondAttribute="height" multiplier="1:1" id="6ws-Vw-rMv"/>
@@ -36,13 +35,14 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remove Duplicate Contacts from Your Phone Directory" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1o-5r-GMn">
-                    <rect key="frame" x="164.5" y="20" width="179.5" height="35"/>
+                    <rect key="frame" x="165" y="0.0" width="179" height="36"/>
                     <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="K1o-5r-GMn" firstAttribute="height" secondItem="85o-3m-St8" secondAttribute="height" id="4G8-Vw-It1"/>
                 <constraint firstItem="K1o-5r-GMn" firstAttribute="leading" secondItem="85o-3m-St8" secondAttribute="trailing" constant="16" id="Jfn-jK-m7J"/>
@@ -55,7 +55,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="K1o-5r-GMn" secondAttribute="bottom" id="zNZ-od-b0M"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="mG6-1l-quU"/>
@@ -71,5 +70,8 @@
     </objects>
     <resources>
         <image name="backupPremiumIcon" width="35" height="35"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
