--- a/Depo/Depo/Presentation/UserStories/Settings/UserInfoSubView/View/UserInfoSubViewViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/UserInfoSubView/View/UserInfoSubViewViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserInfoSubViewViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserInfoSubViewViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="accountDetailsButton" destination="p0x-Vm-7vZ" id="8yg-Ui-h4s"/>
                 <outlet property="accountDetailsLabel" destination="yzz-rJ-18M" id="LhY-xY-Tvh"/>
@@ -28,9 +29,9 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="201"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENa-fn-7QZ" customClass="CircleProgressView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENa-fn-7QZ" customClass="CircleProgressView" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="20" y="20" width="107" height="107"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="107" id="25L-SR-9w5"/>
                         <constraint firstAttribute="width" constant="107" id="Gug-4o-vag"/>
@@ -43,7 +44,7 @@
                         <constraint firstAttribute="width" constant="80" id="rfW-12-dGT"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vQk-2j-n8e">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vQk-2j-n8e">
                     <rect key="frame" x="20" y="20" width="107" height="107"/>
                     <connections>
                         <action selector="onUpdateUserPhoto" destination="-1" eventType="touchUpInside" id="xGV-6k-VVt"/>
@@ -80,20 +81,20 @@
                             <rect key="frame" x="0.0" y="213" width="208" height="16"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yzz-rJ-18M">
-                                    <rect key="frame" x="0.0" y="0.0" width="42" height="16"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="41.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron_left" translatesAutoresizingMaskIntoConstraints="NO" id="TQD-5m-Jk3">
-                                    <rect key="frame" x="46" y="3" width="6" height="10"/>
+                                    <rect key="frame" x="45.5" y="3" width="6" height="10"/>
                                     <color key="tintColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="6" id="jaG-H3-eOU"/>
                                         <constraint firstAttribute="height" constant="10" id="weg-CT-dMq"/>
                                     </constraints>
                                 </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p0x-Vm-7vZ">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p0x-Vm-7vZ">
                                     <rect key="frame" x="0.0" y="0.0" width="208" height="16"/>
                                     <connections>
                                         <action selector="onEditUserInformationButton:" destination="-1" eventType="touchUpInside" id="VC7-ZS-ujm"/>
@@ -117,7 +118,7 @@
                         </view>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mGc-ew-Ms8" customClass="GradientPremiumButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mGc-ew-Ms8" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="155" y="150.5" width="46" height="27"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="27" id="7gy-rT-xsh"/>
@@ -152,7 +153,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="mGc-ew-Ms8" firstAttribute="leading" secondItem="kv9-ey-nzo" secondAttribute="leading" id="0z1-lG-7n5"/>
                 <constraint firstItem="Myi-DL-NSq" firstAttribute="top" relation="greaterThanOrEqual" secondItem="LeT-Di-ih8" secondAttribute="bottom" constant="4" id="4Hf-1v-nOa"/>
@@ -184,5 +185,8 @@
     </objects>
     <resources>
         <image name="chevron_left" width="6" height="11"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
